--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.7.5",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19"
+    "eslint-config-next": "13.4.19",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
